trunk/Archive2/d0/6eae2d5854f8d3/output
main.cpp: In function 'int main(int, char**)':
main.cpp:65:26: error: 'set_signal' was not declared in this scope
   set_signal(fd,TIOCM_DTR);
                          ^
main.cpp:67:28: error: 'reset_signal' was not declared in this scope
   reset_signal(fd,TIOCM_DTR);
                            ^
main.cpp: In function 'int set_signal(int, int)':
main.cpp:80:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function 'int reset_signal(int, int)':
main.cpp:88:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
